--- a/src/screens/About/About.css
+++ b/src/screens/About/About.css
@@ -14,10 +14,11 @@
   letter-spacing: 5px;
   margin-bottom: 30px;
 }
-.welcome-msg p {
+.welcome-msg div {
   font-size: 2.5vh;
   font-weight: 1em;
   letter-spacing: 1px;
   margin-bottom: 30px;
   margin: 20px;
+  text-align: left;
 }
